fix(3156108853): Align wallet button to figma

--- a/src/components/UI/WalletButton/WalletButton.module.scss
+++ b/src/components/UI/WalletButton/WalletButton.module.scss
@@ -1,17 +1,23 @@
 @import '../../../index';
 
-.walletButton {
-  border-width: 2px;
+.accountWalletButton {
+  border-width: 1px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 17px;
+  padding: 10px 5px 10px 7px;
 
   .networkLabel {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 0 5px;
-    gap: 4px;
-    background: $--color-purple-navy;
-    border: 2px solid $--color-ceil;
-    border-radius: 6px;
+    padding: 4px 7px;
+    background: $--color-indigo;
+    border: 1px solid $--color-light-steel-blue;
+    border-radius: 4px;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 1;
   }
 
   &.mobile {
@@ -27,4 +33,12 @@
     width: 150px;
     font-size: 16px;
   }
+}
+
+.connectWalletButton {
+  padding: 12px 16px;
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 600;
+  border-width: 0;
 }
